kubernetes/vaultwarden/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: vaultwarden
  name: vaultwarden-policy
specs:
  # TODO: deprecate
  # allow connection from ingress-nginx
  - endpointSelector: &self
      matchLabels:
        app.kubernetes.io/name: vaultwarden
    ingress:
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: ingress-nginx
        toPorts:
          - ports:
              - protocol: TCP
                port: "8080"
  # allow connection from cilium ingress
  - endpointSelector: *self
    ingress:
      - fromEndpoints:
          - matchExpressions:
              - key: reserved:ingress
                operator: Exists
        toPorts:
          - ports:
              - protocol: TCP
                port: "8080"
  # allow connection to push notification server
  - endpointSelector: *self
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: kube-system
              k8s-app: kube-dns
        toPorts:
          - ports:
              - protocol: ANY
                port: "53"
            rules:
              dns: &push
                - matchName: push.bitwarden.com
                - matchName: identity.bitwarden.com
      - toFQDNs: *push
        toPorts:
          - ports:
              - protocol: TCP
                port: "443"
